--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.6.4",
+    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "esm": "^3.2.25",
     "express": "^4.17.1",
